[package]
name = "MineStar"
version = "0.0.1"
authors = ["ChrisFirerabbit"]

[dependencies]
noise = "0.7.0"
nalgebra = "0.29.0"
approx = "0.5.0"
hashbrown = "0.11.2"
tarpc = "0.27.2"
rand = "0.8.4"
ndarray ="0.15.3"

piston_window = "0.120.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.32.0"
piston2d-sprite = "0.64.0"
image = "0.23.0"
piston2d-drag_controller = "0.30.0"
piston2d-deform_grid = "0.10.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
vecmath = "1.0.0"
camera_controllers = "0.32.0"
shader_version = "0.7.0"

[profile.release]
lto = true

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"